merge main into lucene_snapshot resolving conflicts (#136096)