@@ -29,6 +29,7 @@ import org.elasticsearch.search.builder.SearchSourceBuilder;
 import org.elasticsearch.search.rescore.QueryRescorerBuilder;
 import org.elasticsearch.search.retriever.RescorerRetrieverBuilder;
 import org.elasticsearch.search.retriever.StandardRetrieverBuilder;
+import org.elasticsearch.search.sort.FieldSortBuilder;
 import org.elasticsearch.telemetry.Measurement;
 import org.elasticsearch.telemetry.TestTelemetryPlugin;
 import org.elasticsearch.test.ESSingleNodeTestCase;
@@ -36,10 +37,14 @@ import org.hamcrest.Matchers;
 import org.junit.After;
 import org.junit.Before;
 
+import java.time.LocalDateTime;
+import java.time.ZoneOffset;
+import java.time.format.DateTimeFormatter;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.Comparator;
 import java.util.List;
+import java.util.Locale;
 import java.util.Map;
 import java.util.concurrent.TimeUnit;
 
@@ -52,11 +57,11 @@ import static org.elasticsearch.test.hamcrest.ElasticsearchAssertions.assertSear
 
 public class SearchTookTimeTelemetryTests extends ESSingleNodeTestCase {
     private static final String indexName = "test_search_metrics2";
-
-    @Override
-    protected boolean resetNodeAfterTest() {
-        return true;
-    }
+    private static final String indexNameNanoPrecision = "nano_search_metrics2";
+    private static final String singleShardIndexName = "single_shard_test_search_metric";
+    private static final LocalDateTime NOW = LocalDateTime.now(ZoneOffset.UTC);
+    private static final DateTimeFormatter FORMATTER_MILLIS = DateTimeFormatter.ofPattern("yyyy-MM-dd'T'HH:mm:ss", Locale.ROOT);
+    private static final DateTimeFormatter FORMATTER_NANOS = DateTimeFormatter.ofPattern("yyyy-MM-dd'T'HH:mm:ss.nnnnnnnnn", Locale.ROOT);
 
     @Before
     public void setUpIndex() {
@@ -69,8 +74,95 @@ public class SearchTookTimeTelemetryTests extends ESSingleNodeTestCase {
                 .build()
         );
         ensureGreen(indexName);
-        prepareIndex(indexName).setId("1").setSource("body", "foo", "@timestamp", "2024-11-01").setRefreshPolicy(IMMEDIATE).get();
-        prepareIndex(indexName).setId("2").setSource("body", "foo", "@timestamp", "2024-12-01").setRefreshPolicy(IMMEDIATE).get();
+        prepareIndex(indexName).setId("1")
+            .setSource("body", "foo", "@timestamp", "2024-11-01", "event.ingested", "2024-11-01")
+            .setRefreshPolicy(IMMEDIATE)
+            .get();
+        prepareIndex(indexName).setId("2")
+            .setSource("body", "foo", "@timestamp", "2024-12-01", "event.ingested", "2024-12-01")
+            .setRefreshPolicy(IMMEDIATE)
+            .get();
+
+        // we use a single shard index to test the case where query and fetch execute in the same round-trip
+        createIndex(
+            singleShardIndexName,
+            Settings.builder().put(IndexMetadata.SETTING_NUMBER_OF_SHARDS, 1).put(IndexMetadata.SETTING_NUMBER_OF_REPLICAS, 0).build()
+        );
+        ensureGreen(singleShardIndexName);
+        prepareIndex(singleShardIndexName).setId("1")
+            .setSource("body", "foo", "@timestamp", NOW.minusMinutes(5).withSecond(randomIntBetween(0, 59)).format(FORMATTER_MILLIS))
+            .setRefreshPolicy(IMMEDIATE)
+            .get();
+        prepareIndex(singleShardIndexName).setId("2")
+            .setSource("body", "foo", "@timestamp", NOW.minusMinutes(30).withSecond(randomIntBetween(0, 59)).format(FORMATTER_MILLIS))
+            .setRefreshPolicy(IMMEDIATE)
+            .get();
+
+        createIndex(
+            indexNameNanoPrecision,
+            Settings.builder()
+                .put(IndexMetadata.SETTING_NUMBER_OF_SHARDS, num_primaries)
+                .put(IndexMetadata.SETTING_NUMBER_OF_REPLICAS, 0)
+                .build(),
+            "_doc",
+            "@timestamp",
+            "type=date_nanos"
+        );
+        ensureGreen(indexNameNanoPrecision);
+        prepareIndex(indexNameNanoPrecision).setId("10")
+            .setSource(
+                "body",
+                "foo",
+                "@timestamp",
+                NOW.minusMinutes(2).withNano(randomIntBetween(0, 1_000_000_000)).format(FORMATTER_NANOS)
+            )
+            .setRefreshPolicy(IMMEDIATE)
+            .get();
+        prepareIndex(indexNameNanoPrecision).setId("11")
+            .setSource(
+                "body",
+                "foo",
+                "@timestamp",
+                NOW.minusMinutes(3).withNano(randomIntBetween(0, 1_000_000_000)).format(FORMATTER_NANOS)
+            )
+            .setRefreshPolicy(IMMEDIATE)
+            .get();
+        prepareIndex(indexNameNanoPrecision).setId("12")
+            .setSource(
+                "body",
+                "foo",
+                "@timestamp",
+                NOW.minusMinutes(4).withNano(randomIntBetween(0, 1_000_000_000)).format(FORMATTER_NANOS)
+            )
+            .setRefreshPolicy(IMMEDIATE)
+            .get();
+        prepareIndex(indexNameNanoPrecision).setId("13")
+            .setSource(
+                "body",
+                "foo",
+                "@timestamp",
+                NOW.minusMinutes(5).withNano(randomIntBetween(0, 1_000_000_000)).format(FORMATTER_NANOS)
+            )
+            .setRefreshPolicy(IMMEDIATE)
+            .get();
+        prepareIndex(indexNameNanoPrecision).setId("14")
+            .setSource(
+                "body",
+                "foo",
+                "@timestamp",
+                NOW.minusMinutes(6).withNano(randomIntBetween(0, 1_000_000_000)).format(FORMATTER_NANOS)
+            )
+            .setRefreshPolicy(IMMEDIATE)
+            .get();
+        prepareIndex(indexNameNanoPrecision).setId("15")
+            .setSource(
+                "body",
+                "foo",
+                "@timestamp",
+                NOW.minusMinutes(75).withNano(randomIntBetween(0, 1_000_000_000)).format(FORMATTER_NANOS)
+            )
+            .setRefreshPolicy(IMMEDIATE)
+            .get();
     }
 
     @After
@@ -178,7 +270,7 @@ public class SearchTookTimeTelemetryTests extends ESSingleNodeTestCase {
             SearchResponse searchResponse = client().prepareSearch("_all").setQuery(simpleQueryStringQuery("foo")).get();
             try {
                 assertNoFailures(searchResponse);
-                assertSearchHits(searchResponse, "1", "2");
+                assertSearchHits(searchResponse, "1", "2", "1", "2", "10", "11", "12", "13", "14", "15");
             } finally {
                 searchResponse.decRef();
             }
@@ -227,7 +319,7 @@ public class SearchTookTimeTelemetryTests extends ESSingleNodeTestCase {
     }
 
     public void testSimpleQueryAgainstWildcardExpression() {
-        SearchResponse searchResponse = client().prepareSearch("*").setQuery(simpleQueryStringQuery("foo")).get();
+        SearchResponse searchResponse = client().prepareSearch("test*").setQuery(simpleQueryStringQuery("foo")).get();
         try {
             assertNoFailures(searchResponse);
             assertSearchHits(searchResponse, "1", "2");
@@ -291,8 +383,16 @@ public class SearchTookTimeTelemetryTests extends ESSingleNodeTestCase {
         List<Measurement> measurements = getTestTelemetryPlugin().getLongHistogramMeasurement(TOOK_DURATION_TOTAL_HISTOGRAM_NAME);
         // compound retriever does its own search as an async action, whose took time is recorded separately
         assertEquals(2, measurements.size());
-        assertThat(measurements.getFirst().getLong(), Matchers.lessThan(searchResponse.getTook().millis()));
+        assertThat(measurements.getFirst().getLong(), Matchers.lessThanOrEqualTo(searchResponse.getTook().millis()));
         assertEquals(searchResponse.getTook().millis(), measurements.getLast().getLong());
+        for (Measurement measurement : measurements) {
+            Map<String, Object> attributes = measurement.attributes();
+            assertEquals(4, attributes.size());
+            assertEquals("user", attributes.get("target"));
+            assertEquals("hits_only", attributes.get("query_type"));
+            assertEquals("_score", attributes.get("sort"));
+            assertEquals("pit", attributes.get("pit_scroll"));
+        }
     }
 
     public void testMultiSearch() {
@@ -382,7 +482,13 @@ public class SearchTookTimeTelemetryTests extends ESSingleNodeTestCase {
         assertEquals(1, measurements.size());
         Measurement measurement = measurements.getFirst();
         assertEquals(searchResponse.getTook().millis(), measurement.getLong());
-        assertTimeRangeAttributes(measurement.attributes());
+        Map<String, Object> attributes = measurement.attributes();
+        assertEquals(4, attributes.size());
+        assertEquals("user", attributes.get("target"));
+        assertEquals("hits_only", attributes.get("query_type"));
+        assertEquals("_score", attributes.get("sort"));
+        assertEquals("@timestamp", attributes.get("time_range_filter_field"));
+        // there were no results, and no shards queried, hence no range filter extracted from the query either
     }
 
     /**
@@ -404,6 +510,8 @@ public class SearchTookTimeTelemetryTests extends ESSingleNodeTestCase {
         assertEquals(1, measurements.size());
         Measurement measurement = measurements.getFirst();
         assertEquals(searchResponse.getTook().millis(), measurement.getLong());
+        // in this case the range query gets rewritten to a range query with open bounds on the shards. Here we test that query rewrite
+        // is able to grab the parsed range filter and propagate it all the way to the search response
         assertTimeRangeAttributes(measurement.attributes());
     }
 
@@ -427,11 +535,273 @@ public class SearchTookTimeTelemetryTests extends ESSingleNodeTestCase {
     }
 
     private static void assertTimeRangeAttributes(Map<String, Object> attributes) {
-        assertEquals(4, attributes.size());
+        assertEquals(5, attributes.size());
         assertEquals("user", attributes.get("target"));
         assertEquals("hits_only", attributes.get("query_type"));
         assertEquals("_score", attributes.get("sort"));
-        assertEquals(true, attributes.get("range_timestamp"));
+        assertEquals("@timestamp", attributes.get("time_range_filter_field"));
+        assertEquals("older_than_14_days", attributes.get("time_range_filter_from"));
+    }
+
+    public void testTimeRangeFilterAllResultsFilterOnEventIngested() {
+        BoolQueryBuilder boolQueryBuilder = new BoolQueryBuilder();
+        boolQueryBuilder.filter(new RangeQueryBuilder("event.ingested").from("2024-10-01"));
+        boolQueryBuilder.must(simpleQueryStringQuery("foo"));
+        SearchResponse searchResponse = client().prepareSearch(indexName).setPreFilterShardSize(1).setQuery(boolQueryBuilder).get();
+        try {
+            assertNoFailures(searchResponse);
+            assertSearchHits(searchResponse, "1", "2");
+        } finally {
+            searchResponse.decRef();
+        }
+
+        List<Measurement> measurements = getTestTelemetryPlugin().getLongHistogramMeasurement(TOOK_DURATION_TOTAL_HISTOGRAM_NAME);
+        assertEquals(1, measurements.size());
+        Measurement measurement = measurements.getFirst();
+        assertEquals(searchResponse.getTook().millis(), measurement.getLong());
+        Map<String, Object> attributes = measurement.attributes();
+        assertEquals(5, attributes.size());
+        assertEquals("user", attributes.get("target"));
+        assertEquals("hits_only", attributes.get("query_type"));
+        assertEquals("_score", attributes.get("sort"));
+        assertEquals("event.ingested", attributes.get("time_range_filter_field"));
+        assertEquals("older_than_14_days", attributes.get("time_range_filter_from"));
+    }
+
+    public void testTimeRangeFilterAllResultsFilterOnEventIngestedAndTimestamp() {
+        BoolQueryBuilder boolQueryBuilder = new BoolQueryBuilder();
+        boolQueryBuilder.filter(new RangeQueryBuilder("event.ingested").from("2024-10-01"));
+        boolQueryBuilder.filter(new RangeQueryBuilder("@timestamp").from("2024-10-01"));
+        boolQueryBuilder.must(simpleQueryStringQuery("foo"));
+        SearchResponse searchResponse = client().prepareSearch(indexName).setPreFilterShardSize(1).setQuery(boolQueryBuilder).get();
+        try {
+            assertNoFailures(searchResponse);
+            assertSearchHits(searchResponse, "1", "2");
+        } finally {
+            searchResponse.decRef();
+        }
+
+        List<Measurement> measurements = getTestTelemetryPlugin().getLongHistogramMeasurement(TOOK_DURATION_TOTAL_HISTOGRAM_NAME);
+        assertEquals(1, measurements.size());
+        Measurement measurement = measurements.getFirst();
+        assertEquals(searchResponse.getTook().millis(), measurement.getLong());
+        Map<String, Object> attributes = measurement.attributes();
+        assertEquals(5, attributes.size());
+        assertEquals("user", attributes.get("target"));
+        assertEquals("hits_only", attributes.get("query_type"));
+        assertEquals("_score", attributes.get("sort"));
+        assertEquals("@timestamp_AND_event.ingested", attributes.get("time_range_filter_field"));
+        assertEquals("older_than_14_days", attributes.get("time_range_filter_from"));
+    }
+
+    public void testTimeRangeFilterOneResultQueryAndFetchRecentTimestamps() {
+        BoolQueryBuilder boolQueryBuilder = new BoolQueryBuilder();
+        boolQueryBuilder.filter(new RangeQueryBuilder("@timestamp").from(FORMATTER_MILLIS.format(NOW.minusMinutes(10))));
+        boolQueryBuilder.must(simpleQueryStringQuery("foo"));
+        SearchResponse searchResponse = client().prepareSearch(singleShardIndexName)
+            .setQuery(boolQueryBuilder)
+            .addSort(new FieldSortBuilder("@timestamp"))
+            .get();
+        try {
+            assertNoFailures(searchResponse);
+            assertSearchHits(searchResponse, "1");
+        } finally {
+            searchResponse.decRef();
+        }
+
+        List<Measurement> measurements = getTestTelemetryPlugin().getLongHistogramMeasurement(TOOK_DURATION_TOTAL_HISTOGRAM_NAME);
+        assertEquals(1, measurements.size());
+        Measurement measurement = measurements.getFirst();
+        assertEquals(searchResponse.getTook().millis(), measurement.getLong());
+        Map<String, Object> attributes = measurement.attributes();
+        assertEquals(5, attributes.size());
+        assertEquals("user", attributes.get("target"));
+        assertEquals("hits_only", attributes.get("query_type"));
+        assertEquals("@timestamp", attributes.get("sort"));
+        assertEquals("@timestamp", attributes.get("time_range_filter_field"));
+        assertEquals("15_minutes", attributes.get("time_range_filter_from"));
+    }
+
+    public void testMultipleTimeRangeFiltersQueryAndFetchRecentTimestamps() {
+        BoolQueryBuilder boolQueryBuilder = new BoolQueryBuilder();
+        // we take the lowest of the two bounds
+        boolQueryBuilder.must(new RangeQueryBuilder("@timestamp").from(FORMATTER_MILLIS.format(NOW.minusMinutes(20))));
+        boolQueryBuilder.filter(new RangeQueryBuilder("@timestamp").from(FORMATTER_MILLIS.format(NOW.minusMinutes(10))));
+        // should and must_not get ignored
+        boolQueryBuilder.should(new RangeQueryBuilder("@timestamp").from(FORMATTER_MILLIS.format(NOW.minusMinutes(2))));
+        boolQueryBuilder.mustNot(new RangeQueryBuilder("@timestamp").from(FORMATTER_MILLIS.format(NOW.minusMinutes(1))));
+        boolQueryBuilder.must(simpleQueryStringQuery("foo"));
+        SearchResponse searchResponse = client().prepareSearch(singleShardIndexName)
+            .setQuery(boolQueryBuilder)
+            .addSort(new FieldSortBuilder("@timestamp"))
+            .get();
+        try {
+            assertNoFailures(searchResponse);
+            assertSearchHits(searchResponse, "1");
+        } finally {
+            searchResponse.decRef();
+        }
+
+        List<Measurement> measurements = getTestTelemetryPlugin().getLongHistogramMeasurement(TOOK_DURATION_TOTAL_HISTOGRAM_NAME);
+        assertEquals(1, measurements.size());
+        Measurement measurement = measurements.getFirst();
+        assertEquals(searchResponse.getTook().millis(), measurement.getLong());
+        Map<String, Object> attributes = measurement.attributes();
+        assertEquals(5, attributes.size());
+        assertEquals("user", attributes.get("target"));
+        assertEquals("hits_only", attributes.get("query_type"));
+        assertEquals("@timestamp", attributes.get("sort"));
+        assertEquals("@timestamp", attributes.get("time_range_filter_field"));
+        assertEquals("1_hour", attributes.get("time_range_filter_from"));
+    }
+
+    public void testTimeRangeFilterAllResultsShouldClause() {
+        BoolQueryBuilder boolQueryBuilder = new BoolQueryBuilder();
+        boolQueryBuilder.should(new RangeQueryBuilder("@timestamp").from("2024-10-01"));
+        boolQueryBuilder.must(simpleQueryStringQuery("foo"));
+        SearchResponse searchResponse = client().prepareSearch(indexName).setQuery(boolQueryBuilder).get();
+        try {
+            assertNoFailures(searchResponse);
+            assertSearchHits(searchResponse, "1", "2");
+        } finally {
+            searchResponse.decRef();
+        }
+
+        List<Measurement> measurements = getTestTelemetryPlugin().getLongHistogramMeasurement(TOOK_DURATION_TOTAL_HISTOGRAM_NAME);
+        assertEquals(1, measurements.size());
+        Measurement measurement = measurements.getFirst();
+        assertEquals(searchResponse.getTook().millis(), measurement.getLong());
+        assertSimpleQueryAttributes(measurement.attributes());
+    }
+
+    public void testTimeRangeFilterOneResultMustNotClause() {
+        BoolQueryBuilder boolQueryBuilder = new BoolQueryBuilder();
+        boolQueryBuilder.mustNot(new RangeQueryBuilder("@timestamp").from("2024-12-01"));
+        boolQueryBuilder.must(simpleQueryStringQuery("foo"));
+        SearchResponse searchResponse = client().prepareSearch(indexName).setQuery(boolQueryBuilder).get();
+        try {
+            assertNoFailures(searchResponse);
+            assertSearchHits(searchResponse, "1");
+        } finally {
+            searchResponse.decRef();
+        }
+
+        List<Measurement> measurements = getTestTelemetryPlugin().getLongHistogramMeasurement(TOOK_DURATION_TOTAL_HISTOGRAM_NAME);
+        assertEquals(1, measurements.size());
+        Measurement measurement = measurements.getFirst();
+        assertEquals(searchResponse.getTook().millis(), measurement.getLong());
+        assertSimpleQueryAttributes(measurement.attributes());
+    }
+
+    public void testTimeRangeFilterAllResultsNanoPrecision() {
+        BoolQueryBuilder boolQueryBuilder = new BoolQueryBuilder();
+        boolQueryBuilder.filter(new RangeQueryBuilder("@timestamp").from(FORMATTER_NANOS.format(NOW.minusMinutes(20))));
+        boolQueryBuilder.must(simpleQueryStringQuery("foo"));
+        SearchResponse searchResponse = client().prepareSearch(indexNameNanoPrecision).setQuery(boolQueryBuilder).get();
+        try {
+            assertNoFailures(searchResponse);
+            assertSearchHits(searchResponse, "10", "11", "12", "13", "14");
+        } finally {
+            searchResponse.decRef();
+        }
+
+        List<Measurement> measurements = getTestTelemetryPlugin().getLongHistogramMeasurement(TOOK_DURATION_TOTAL_HISTOGRAM_NAME);
+        assertEquals(1, measurements.size());
+        Measurement measurement = measurements.getFirst();
+        assertEquals(searchResponse.getTook().millis(), measurement.getLong());
+        Map<String, Object> attributes = measurement.attributes();
+        assertEquals(5, attributes.size());
+        assertEquals("user", attributes.get("target"));
+        assertEquals("hits_only", attributes.get("query_type"));
+        assertEquals("_score", attributes.get("sort"));
+        assertEquals("@timestamp", attributes.get("time_range_filter_field"));
+        assertEquals("1_hour", attributes.get("time_range_filter_from"));
+    }
+
+    public void testTimeRangeFilterAllResultsMixedPrecision() {
+        BoolQueryBuilder boolQueryBuilder = new BoolQueryBuilder();
+        boolQueryBuilder.filter(new RangeQueryBuilder("@timestamp").from(FORMATTER_NANOS.format(NOW.minusMinutes(20))));
+        boolQueryBuilder.must(simpleQueryStringQuery("foo"));
+        SearchResponse searchResponse = client().prepareSearch(singleShardIndexName, indexNameNanoPrecision)
+            .setQuery(boolQueryBuilder)
+            .get();
+        try {
+            assertNoFailures(searchResponse);
+            assertSearchHits(searchResponse, "1", "10", "11", "12", "13", "14");
+        } finally {
+            searchResponse.decRef();
+        }
+
+        List<Measurement> measurements = getTestTelemetryPlugin().getLongHistogramMeasurement(TOOK_DURATION_TOTAL_HISTOGRAM_NAME);
+        assertEquals(1, measurements.size());
+        Measurement measurement = measurements.getFirst();
+        assertEquals(searchResponse.getTook().millis(), measurement.getLong());
+        Map<String, Object> attributes = measurement.attributes();
+        assertEquals(5, attributes.size());
+        assertEquals("user", attributes.get("target"));
+        assertEquals("hits_only", attributes.get("query_type"));
+        assertEquals("_score", attributes.get("sort"));
+        assertEquals("@timestamp", attributes.get("time_range_filter_field"));
+        assertEquals("1_hour", attributes.get("time_range_filter_from"));
+    }
+
+    public void testStandardRetrieverWithTimeRangeQuery() {
+        SearchSourceBuilder searchSourceBuilder = new SearchSourceBuilder();
+        searchSourceBuilder.retriever(new StandardRetrieverBuilder(new RangeQueryBuilder("event.ingested").from("2024-12-01")));
+        SearchResponse searchResponse = client().prepareSearch(indexName).setSource(searchSourceBuilder).get();
+        try {
+            assertNoFailures(searchResponse);
+            assertSearchHits(searchResponse, "2");
+        } finally {
+            searchResponse.decRef();
+        }
+
+        List<Measurement> measurements = getTestTelemetryPlugin().getLongHistogramMeasurement(TOOK_DURATION_TOTAL_HISTOGRAM_NAME);
+        assertEquals(1, measurements.size());
+        assertThat(measurements.getFirst().getLong(), Matchers.lessThanOrEqualTo(searchResponse.getTook().millis()));
+        assertEquals(searchResponse.getTook().millis(), measurements.getLast().getLong());
+        for (Measurement measurement : measurements) {
+            Map<String, Object> attributes = measurement.attributes();
+            assertEquals(5, attributes.size());
+            assertEquals("user", attributes.get("target"));
+            assertEquals("hits_only", attributes.get("query_type"));
+            assertEquals("_score", attributes.get("sort"));
+            assertEquals("event.ingested", attributes.get("time_range_filter_field"));
+            assertEquals("older_than_14_days", attributes.get("time_range_filter_from"));
+        }
+    }
+
+    public void testCompoundRetrieverWithTimeRangeQuery() {
+        SearchSourceBuilder searchSourceBuilder = new SearchSourceBuilder();
+        searchSourceBuilder.retriever(
+            new RescorerRetrieverBuilder(
+                new StandardRetrieverBuilder(new RangeQueryBuilder("@timestamp").from("2024-12-01")),
+                List.of(new QueryRescorerBuilder(new MatchAllQueryBuilder()))
+            )
+        );
+        SearchResponse searchResponse = client().prepareSearch(indexName).setSource(searchSourceBuilder).get();
+        try {
+            assertNoFailures(searchResponse);
+            assertSearchHits(searchResponse, "2");
+        } finally {
+            searchResponse.decRef();
+        }
+
+        List<Measurement> measurements = getTestTelemetryPlugin().getLongHistogramMeasurement(TOOK_DURATION_TOTAL_HISTOGRAM_NAME);
+        // compound retriever does its own search as an async action, whose took time is recorded separately
+        assertEquals(2, measurements.size());
+        assertThat(measurements.getFirst().getLong(), Matchers.lessThan(searchResponse.getTook().millis()));
+        assertEquals(searchResponse.getTook().millis(), measurements.getLast().getLong());
+        for (Measurement measurement : measurements) {
+            Map<String, Object> attributes = measurement.attributes();
+            assertEquals(6, attributes.size());
+            assertEquals("user", attributes.get("target"));
+            assertEquals("hits_only", attributes.get("query_type"));
+            assertEquals("_score", attributes.get("sort"));
+            assertEquals("pit", attributes.get("pit_scroll"));
+            assertEquals("@timestamp", attributes.get("time_range_filter_field"));
+            assertEquals("older_than_14_days", attributes.get("time_range_filter_from"));
+        }
     }
 
     private void resetMeter() {
@@ -439,6 +809,6 @@ public class SearchTookTimeTelemetryTests extends ESSingleNodeTestCase {
     }
 
     private TestTelemetryPlugin getTestTelemetryPlugin() {
-        return getInstanceFromNode(PluginsService.class).filterPlugins(TestTelemetryPlugin.class).toList().get(0);
+        return getInstanceFromNode(PluginsService.class).filterPlugins(TestTelemetryPlugin.class).toList().getFirst();
     }
 }
